<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/item_margin_padding_normal">

    <EditText
        android:id="@+id/editWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:inputType="text|textNoSuggestions"
        android:padding="@dimen/item_margin_padding_small"
        android:textSize="@dimen/text_size_normal" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_border"
        android:inputType="numberDecimal"
        android:padding="@dimen/item_margin_padding_small"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/item_margin_padding_normal"
        android:layout_marginTop="@dimen/item_margin_padding_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_margin_padding_normal"
            android:text="@string/color"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/txtUndefined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undefined"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_size_small" />

        <View
            android:id="@+id/viewColor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/btnRemove"
            style="@style/Button.Secondary"
            android:layout_marginStart="@dimen/item_margin_padding_small"
            android:text="@string/remove"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:thumbTint="@color/red"
        tools:targetApi="lollipop" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_padding_small"
        android:max="255"
        android:thumbTint="@color/green"
        tools:targetApi="lollipop" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_padding_small"
        android:max="255"
        android:thumbTint="@color/blue"
        tools:targetApi="lollipop" />

</LinearLayout>